src/AIS/AIS_MouseGesture.hxx
@@ -21,10 +21,15 @@ enum AIS_MouseGesture
 {
   AIS_MouseGesture_NONE,            //!< no active gesture
   //
-  AIS_MouseGesture_SelectRectangle, //!< rectangular selection
-  AIS_MouseGesture_SelectLasso,     //!< polygonal   selection
+  AIS_MouseGesture_SelectRectangle, //!< rectangular selection;
+                                    //!  press button to start, move mouse to define rectangle, release to finish
+  AIS_MouseGesture_SelectLasso,     //!< polygonal selection;
+                                    //!  press button to start, move mouse to define polygonal path, release to finish
   //
-  AIS_MouseGesture_Zoom,            //!< view zoom gesture
+  AIS_MouseGesture_Zoom,            //!< view zoom gesture;
+                                    //!  move mouse left to zoom-out, and to the right to zoom-in
+  AIS_MouseGesture_ZoomWindow,      //!< view zoom by window gesture;
+                                    //!  press button to start, move mouse to define rectangle, release to finish
   AIS_MouseGesture_Pan,             //!< view panning gesture
   AIS_MouseGesture_RotateOrbit,     //!< orbit rotation gesture
   AIS_MouseGesture_RotateView,      //!< view  rotation gesture
