src/AIS/AIS_ViewInputBuffer.hxx
@@ -25,7 +25,8 @@ enum AIS_ViewSelectionTool
 {
   AIS_ViewSelectionTool_Picking,    //!< pick to select
   AIS_ViewSelectionTool_RubberBand, //!< rubber-band to select
-  AIS_ViewSelectionTool_Polygon     //!< polyline to select
+  AIS_ViewSelectionTool_Polygon,    //!< polyline to select
+  AIS_ViewSelectionTool_ZoomWindow, //!< zoom-in window (no selection)
 };
 
 //! Input buffer type.
